2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: subst the expanded value of
	$(sbindir) and output sabayon.console. Hack copied
	from gdm. 

	* admin-tool/Makefile.am: don't build sabayon.console here.
	
	* admin-tool/sabayon.console.in: use $(EXPANDED_SABAYON_DIR)
	
	* lib/sources/Makefile.am: install in the right directory.
	
	* sabayon.spec.in: update to include icon, .desktop file,
	usermode stuff, localizations etc.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	* Makefile.am,
	  admin-tool/Makefile.am: distcheck fixes.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	Applying seems to actually work now ...

	* admin-tool/sabayon-apply.in,
	  admin-tool/sabayon-apply.py: add tool which applies
	a profile.
	
	* admin-tool/Makefile.am: add sabayon-apply.
	
	* lib/config.py.in: s/SESSION_TOOL_PATH/SESSION_TOOL_ARGV/
	and add APPLY_TOOL_ARGV.
	
	* lib/protosession.py: run sabayon-apply instead of
	trying to do it directly.
	
	* admin-tool/profilesdialog.py: use SESSION_TOOL_ARGV
	instead of SESSION_TOOL_PATH.

2005-02-14  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add a list of env variables
	which should be passed through unmodified when
	starting the prototype session. Include SABAYON_DEBUG
	in the list.
	
	* lib/protosession.py: use the list here.
	
	* lib/dirmonitor.py: add debug spew, fix a bug
	with ignorationism.
	
	* lib/sources/filessource.py,
	  lib/sources/paneldelegate.py,
	  lib/storage.py,
	  lib/userprofile.py: more debug spew.
	
	* lib/util.py: add pid to debug spew.
	
	* admin-tool/monitorwindow.py,
	  admin-tool/profilesdialog.py: yet more spewage.

2005-02-14  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py: hook up debugging.

2005-02-14  Mark McLoughlin  <markmc@redhat.com>

	* lib/util.py: (debug_print): add "admin-tool" key.

	* admin-tool/profilesdialog.py: hook up debugging.
	
	* lib/protosession.py: ditto.
	