@@ -1,5 +1,9 @@
 2005-02-15  Mark McLoughlin  <markmc@redhat.com>
 
+	* lib/sources/paneldelegate.py: fix typo.
+
+2005-02-15  Mark McLoughlin  <markmc@redhat.com>
+
 	* configure.ac: subst the expanded value of
 	$(sbindir) and output sabayon.console. Hack copied
 	from gdm. 
